src/Project/Project.css
@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.card {
  border: 1px solid rgba(255, 255, 255, 0.13);
  border-radius: 0.5rem;
  overflow: hidden;
  width: fit-content;
  background-color: #1a1a1a;
  transition: box-shadow 0.15s ease-in-out;
  cursor: pointer;
  padding: 15px;
  animation: fadeIn 1.25s ease-in-out forwards;
}

.card:hover {
  box-shadow: rgba(255, 255, 255, 0.6) 0px 0px 50px -20px,
    rgba(255, 255, 255, 0.35) 0px 30px 60px -30px;
}

.card-selected {
  box-shadow: rgba(255, 255, 255, 0.1) 0px 0px 15px 0px;
}

.project-list-container {
  opacity: 0.5;
  transition: opacity 0.3s ease-in-out;
}

.project-list-container:hover {
  opacity: 1;
}

